[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/art/tileset/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Platforms/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Level/Level.gd" type="Script" id=5]
[ext_resource path="res://assets/art/platforms/moving_platform.png" type="Texture" id=6]
[ext_resource path="res://src/Level/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/music/music.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/Level/Music.gd" type="Script" id=9]
[ext_resource path="res://src/FallOffWorld/FallOffWorld.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/art/door/sign_browndoor.png" type="Texture" id=11]
[ext_resource path="res://src/Level/Door.gd" type="Script" id=12]
[ext_resource path="res://assets/art/door/enter-png-enter-icon-1600.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]
resource_name = "move"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 430, 208 ), Vector2( 530, 208 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 32.5 )

[node name="Level" type="Node2D"]
pause_mode = 1
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -64, -213 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
show_collision = true
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 524290, 0, 0, 589826, 1610612738, 0, 655362, 2, 0, 720899, 0, 0, 720900, 0, 0, 786434, 34, 0, 786435, 34, 0, 786436, 34, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 2, 0, 786456, 51, 0, 786461, 57, 0, 786467, 54, 0, 851973, 34, 0, 851974, 34, 0, 851975, 34, 0, 851977, 29, 0, 851978, 28, 0, 851979, 28, 0, 851980, 32, 0, 851981, 29, 0, 851982, 29, 0, 851983, 29, 0, 851984, 28, 0, 851985, 29, 0, 851986, 29, 0, 851987, 29, 0, 851988, 28, 0, 851989, 29, 0, 851990, 28, 0, 851991, 29, 0, 851996, 29, 0, 851998, 29, 0, 851999, 28, 0, 852000, 28, 0, 852001, 29, 0, 852002, 29, 0 )

[node name="Coins" type="Node" parent="."]

[node name="Coin1" type="Node2D" parent="Coins"]
position = Vector2( 200, 360 )

[node name="Coin" parent="Coins/Coin1" instance=ExtResource( 4 )]
position = Vector2( -57, -212 )

[node name="Coin2" parent="Coins/Coin1" instance=ExtResource( 4 )]
position = Vector2( 439, -236 )

[node name="Coin3" parent="Coins/Coin1" instance=ExtResource( 4 )]
position = Vector2( 135, -172 )

[node name="CoinsArc2" type="Node2D" parent="Coins"]
position = Vector2( 530, 1144 )

[node name="Coin2" parent="Coins/CoinsArc2" instance=ExtResource( 4 )]
position = Vector2( -474, -1016 )

[node name="Coin3" parent="Coins/CoinsArc2" instance=ExtResource( 4 )]
position = Vector2( -98, -962 )

[node name="Coin4" type="Node2D" parent="Coins"]
position = Vector2( 333, 449 )

[node name="Coin3" parent="Coins/Coin4" instance=ExtResource( 4 )]
position = Vector2( 443, -329 )

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 430, 208 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform"]
autoplay = "move"
playback_process_mode = 0
anims/move = SubResource( 1 )

[node name="PlatformStatic" type="StaticBody2D" parent="Platforms"]
position = Vector2( 1456, 290 )
rotation = 0.355618
z_index = -1
collision_layer = 16
collision_mask = 0

[node name="Sprite2" type="Sprite" parent="Platforms/PlatformStatic"]
position = Vector2( -88.692, 10.5003 )
rotation = -0.246293
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Platforms/PlatformStatic"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/PlatformStatic"]
position = Vector2( -0.0684814, 0.0254364 )
polygon = PoolVector2Array( -129.699, 9.94633, -47, -10.5, 8, -7, 10, -1.5, -46.75, -4, -130, 15 )

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 432, 176 )

[node name="FallOffWorld" type="Node" parent="."]

[node name="Fallen" type="Node2D" parent="FallOffWorld"]

[node name="FallOffWorld" parent="FallOffWorld/Fallen" instance=ExtResource( 10 )]
position = Vector2( 488, 216 )
scale = Vector2( 512, 1 )

[node name="Door" type="Node" parent="."]

[node name="Door" type="Area2D" parent="Door"]
collision_layer = 32
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Door"]
position = Vector2( 956, 171 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Door/Door/CollisionShape2D"]
position = Vector2( 0, 1 )
scale = Vector2( 0.0769463, 0.0483049 )
texture = ExtResource( 11 )

[node name="ReturnPrompt" type="Sprite" parent="Door/Door"]
position = Vector2( 956, 111 )
scale = Vector2( 0.015, 0.01875 )
texture = ExtResource( 13 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 7 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
script = ExtResource( 9 )

[connection signal="body_entered" from="Door/Door" to="Door/Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door/Door" to="Door/Door" method="_on_Door_body_exited"]
